# meta_optimization_engine

./: .gitignore  CONTRIBUTING.md  DEMO_RUN_GUIDE.md  LICENSE  README.md  pyproject.toml  sample_expected_output.json  sample_payload.json
app/: __init__.py  config.py  main.py  routes.py
app/rules/: meta_rule_loader.py  meta_rules.yaml
app/schemas/: input_models.py  output_models.py  rule_models.py
app/services/: ingestion_service.py  metric_service.py  normalization_service.py  recommendation_service.py  report_service.py  rule_engine.py
app/utils/: logging_utils.py  math_utils.py  time_utils.py
docs/: ARCHITECTURE.md
meta_optimization_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: analyze_failures.py  batch_validation.py  generate_320_test_cases.py  load_sample_data.py  run_engine_demo.py
test_data/: meta_ads_320_test_cases.json  meta_ads_320_test_cases_summary.csv
test_output/: failures.json
tests/: test_api.py  test_batch_cases.py  test_metrics.py  test_recommendations.py  test_rule_engine.py
